[package]
name = "hexer"
version = "0.1.0"
edition = "2021"
description = "Simple helper functions to create hex dumps"
license-file = "LICENSE"
repository = "https://github.com/ishai42/hexdump"
readme = "README.md"
keywords = ["hexdump", "hex"]
categories = ["development-tools"]
documentation = "https://docs.rs/hexer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
