[package]
name = "qdhex"
version = "0.1.1"
edition = "2021"
description = "Simple helper functions to create hex dumps"
license-file = "LICENSE"
repository = "https://github.com/ishai42/hexdump"
readme = "README.md"
keywords = ["hexdump", "hex"]
categories = ["development-tools"]
documentation = "https://docs.rs/qdhex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std=[]

[dependencies]

